tests/unit/errors/test1.js
// Punto y coma faltante antes de console.log

var a = 5;
var b = 6;
var c = 7
console.log(1);